# photobooth-ai

./: .gitignore  README.md  api_client.py  camera_handler.py  config.py  display_manager.py  index.css  index.html  index.tsx  main.py  package-lock.json  package.json  photobooth.go  photobooth.py  pyproject.toml  qr_generator.py  requirements.txt  s3_uploader.py  vite.config.ts  voice_interaction.py
infrastructure/: app.py  cdk.json  photobooth_stack.py  requirements.txt
infrastructure/cdk.out/: PhotoboothS3Stack-Prod.assets.json  PhotoboothS3Stack-Prod.template.json  manifest.json  tree.json
server/: generatePresignedUrl.ts
